2002-11-25  Chris Blumenberg  <cblu@apple.com>

	Fixed: 2987001 - spurious mime-type errors from <object> images

	KHTML didn't seem to have any clean support for OBJECT tags that are images. Added support for that.

        * khtml/css/html4.css: OBJECTs that are images should be rendered inline
        * khtml/html/html_objectimpl.cpp:
        (HTMLObjectElementImpl::attach): if the type is an image, create a render image
        * khtml/rendering/render_image.cpp:
        (RenderImage::updateFromElement): if the element is an object, use DATA for the URL
        * kwq/KWQDOMNode.cpp:
        (isImage): if it is an OBJECT element, check the type
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge elementAtPoint:]): if the element is an object, use DATA for the URL

2002-11-25  David Hyatt  <hyatt@apple.com>

	Fix this even further.  JUst drop support for arbitrary
	property lookup by name on the document.  Mac IE and
	Gecko only do this for img and form, and this makes things
	a lot faster.
	
        * khtml/ecma/kjs_html.cpp:
        (KJS::HTMLDocument::hasProperty):
        (KJS::HTMLDocument::tryGet):

2002-11-25  David Hyatt  <hyatt@apple.com>

	Rewrite the img/form document property lookup strategy.  This
	should be faster and actually work (gasp!).  Fixes the dhtml
	on hrweb to at least show up.
	
        * khtml/ecma/kjs_html.cpp:
        (KJS::HTMLDocument::tryGet):
        * khtml/html/html_miscimpl.cpp:
        (HTMLCollectionImpl::nextItem):

2002-11-25  David Hyatt  <hyatt@apple.com>

	Add support to QFont for multiple families.  NOw all that's left
	is getting the multiple families out of the font and down into
	WebKit.
	
        * khtml/css/cssstyleselector.cpp:
        * khtml/rendering/font.cpp:
        (Font::update):
        * khtml/rendering/font.h:
        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::recalcStyle):
        * kwq/KWQFont.h:
        * kwq/KWQFont.mm:
        (QFontFamily::QFontFamily):